--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ hitheme     : tomorrow      #
 widgets     : [mathjax, quiz, bootstrap] # {mathjax, quiz, bootstrap}
 mode        : selfcontained # {standalone, draft}
 knit        : slidify::knit2slides
----  .class1 #id1 bg:#216357
+---  .class1 #id1 .class1 #id1 bg:url(assets/img/blackboard-wallpapers1.jpg)
 
 <style media="screen">
 a:link { color:#b3ff1a; text-decoration: none; }
